--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/69821f2f37.js" crossorigin="anonymous"></script>
-    <title>Football </title>
+    <script src="https://kit.fontawesome.com/eaa321a56a.js" crossorigin="anonymous"></script>
+    <title>Football Club</title>
 </head>
 
 <body>
-    <!-- ------------------------ header start -------------------------------- -->
+
     <header>
+        <!-- ------------------------ Banner start -------------------------------- -->
         <section class="header-section">
             <div class="container">
                 <div class="text-bar">
@@ -24,12 +25,13 @@
                 </div>
             </div>
         </section>
+        <!-- ................................ Banner end ................................-->
     </header>
-    <!-- ................................ header end ................................-->
 
-    <!-- ---------------------------------- Player grid style start ------------------ -->
+
+    <!-- ---------------------------------- Players section start ------------------ -->
     <main>
-        <section>
+        <section class="Players-section">
             <div class="players">
                 <div class="player">
                     <img src="images/players/player-1.png" alt="">
@@ -104,12 +106,13 @@
                 </div>
             </div>
         </section>
+        <!-- -------------------- Players section end --------------------------------- -->
 
+        <!-- Highlights part start -->
         <section>
-            <div class="messi-part">
+            <div class="heighlites">
                 <div class="match-info">
-                    <h1> All Higlites </h1>
-                    <h1> Copa America 2021</h1>
+                    <h2> All Highlights </h2>
                     <p>A prolific goalscorer and creative playmaker, Messi holds the records for most goals in La Liga
                         (474), a La Liga and European league season (50), most hat-​tricks</p>
                     <a href="https://copaamerica.com/" target="_blank" class="anchor-button">Watch all live <i
@@ -120,46 +123,37 @@
                 </div>
             </div>
         </section>
+        <!-- Highlights part end -->
+
+        <!-- ............sponsor section start ..........-->
+        <section class="offcial-sponsor">
+            <h2>Our offcials sponsor</h2>
+            <div class="partners">
+                <div class="partner">
+                    <img src="images/sponsor/pic1.jpg" alt="">
+                </div>
+                <div class="partner">
+                    <img src="images/sponsor/pic2.png" alt="">
+                </div>
+                <div class="partner">
+                    <img src="images/sponsor/images.png" alt="">
+                </div>
+            </div>
+        </section>
+        <!-- .................. sponsor section end ....................... -->
+
     </main>
-    <!-- -------------------- Player grid style end --------------------------------- -->
-
-    <!-- ............sponsor section start ..........-->
-    <section class="offcial-sponsor">
-        <h2>Our offcials sponsor</h2>
-        <div class="partners">
-            <div class="partner">
-                <img src="images/sponsor/pic1.jpg" alt="">
-            </div>
-            <div class="partner">
-                <img src="images/sponsor/pic2.png" alt="">
-            </div>
-            <div class="partner">
-                <img src="images/sponsor/images.png" alt="">
-            </div>
-        </div>
-    </section>
-    <!-- .................. sponsor section end ....................... -->
-
-    <!-- ................. latest update section start...................... -->
-    <section class="latest-update">
-        <h2> For Latest Update</h2>
-        <div class="div-for-button">
-            <input type="text " class="enter-mail" placeholder="Enter your Email ">
-            <button class="button-type"> Send</button>
-        </div>
-    </section>
-    <!-- ...................latest update section end ............. -->
 
     <!-- ----------------- Footer section start --------------------- -->
     <footer>
-        <div class="footer-class">
+        <div class="footer-section">
             <img src="images/Logo.png" alt="">
-            <div>
-                <img src="images/Social Icons/Dribbble.png " alt="">
-                <img src="images/Social Icons/Instagram.png" alt="">
-                <img src="images/Social Icons/Twitter.png" alt="">
-                <img src="images/Social Icons/Youtube.png" alt="">
-                <p>copyright &copy Football 2022</p>
+            <div class="social-media">
+                <a href=""><i class="fab fa-facebook fa-4x"></i></a>
+                <a href=""><i class="fab fa-instagram fa-4x"></i></a>
+                <a href=""><i class="fab fa-youtube fa-4x"></i></a>
+                <a href=""><i class="fab fa-twitter fa-4x"></i></a>
+                <p>Copyright &copy SEC-2022 &reg; Omar</p>
             </div>
     </footer>
     <!-- ------------------- Footer section end ------------------ -->
